--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ src/pulsesuite/PSTD3D/output/
 src/pulsesuite/PSTD3D/dataQW/
 src/pulsesuite/PSTD3D/sim/
 src/pulsesuite/PSTD3D/__pycache__/
+tests/PSTD3D/dataQW/*
 aiprompts
 cuda_test.py
 notes.txt
